web-content/css/style.css
@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

body {
	font-family:'Roboto',Verdana;
	margin:0;
}

a {
	text-decoration:none;
}

a:hover {
	text-decoration:underline;
}

.body .material-icons {
	vertical-align:bottom
}

.ldrD {
	margin-top:5px;
}

.lodr {
	display: inline-block;
	position: relative;
	width: 80px;
	height: 80px;
}

.lodr div {
	display: inline-block;
	position: absolute;
	left: 8px;
	width: 16px;
	animation: ldr 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
}

.lodr div:nth-child(1) {
	left: 8px;
	animation-delay: -0.24s;
}

.lodr div:nth-child(2) {
	left: 32px;
	animation-delay: -0.12s;
}

.lodr div:nth-child(3) {
	left: 56px;
	animation-delay: 0;
}

@keyframes ldr {
	0% {
		top: 8px;
		height: 64px;
	}
	50%, 100% {
		top: 24px;
		height: 32px;
	}
}

#authIco {
	width:48px;
	height:48px;
}

#main {
	margin-top:10px;
}

.ratioBar {
	background:red;
	width:75%;
	height:10px;
	margin:0;
}

.ratioBar div {
	background:green;
	height:100%;
	margin:0;
}

.ratioInfo div * {
	text-align:left;
	float:none;
}

.i {
	font-weight:bold;
}

#viewCount {
	text-align:right;
	width:100%;
}

.allFloat *, .snackBar {
	float:left;
}

.allFloat select {
	margin-right:5px;
}

.channelDiv {
	float:left;
	width:100%;
	text-align:right;
}

.channelDiv img {
	margin:1%;
}

.channelInf {
	text-align:left;
}

.channelInf h2 {
	margin:0;
}

.channelInf h3 {
	margin-top:.5%;
	margin-bottom:.5%;
}

.channelInf p {
	margin-top:0;
	margin-bottom:1%;
}

.horiVidChip * {
	text-decoration:none;
}

.option {
	text-align:left;
	margin-bottom:7.5px;
}

@media (max-width:1000px) {
	body {
		text-align:center;
	}
	
	input, .hdr input {
		text-align:left;
	}
	
	.hdr * {
		text-align:center;
		float:none;
	}
	
	.hdr h1 {
		margin-bottom:0;
	}
	
	.hdr div {
		margin-top:10px;
	}
	
	.hdr div * {
		vertical-align:bottom;
	}
	
	.hdr input {
		height:35px;
		padding-left:5px;
		padding-right:5px;
		transition:width .5s;
		width:350px;
	}
	
	.hdr input:focus, .hdr input:active {
		width:375px;
	}
	
	.hdr button {
		padding:0;
		border:0;
		width:40px;
		height:37px;
		margin-left:5px;
	}
	
	a .vidChip {
		text-decoration:none;
		width:99%;
		height:500px;
		margin:5px;
	}
	
	.vidChip * {
		text-decoration:none;
		text-align:left;
	}
	
	.vidChip img {
		width:92%;
		height:300px;
		object-fit:cover;
		margin:4%;
	}
	
	.vidChip h3 {
		margin-top:0;
		margin-bottom:0;
		text-decoration:none;
		margin-left:4%;
	}
	
	.vidChip h4 {
		margin-left:4%;
		margin-right:4%;
		margin-top:0;
		margin-bottom:0;
		text-decoration:none;
	}
	
	video {
		width:100%;
		background:black;
		max-height:545px;
	}
	
	.details {
		text-align:left;
		padding-left:2%;
	}
	
	.details * {
		margin-top:2px;
		margin-bottom:0;
	}
	
	.authorInfo, .ratioInfo {
		width:45%;
	}
	
	.ratioInfo {
		float:right;
		padding-right:1%;
	}
	
	.authorInfo * {
		float:left;
	}
	
	.authorInfo img {
		margin-right:5px;
	}
	
	.authorInfo div * {
		float:none;
	}
	
	.ratioInfo *{
		float:right;
	}
	
	.moreDetails {
		margin-top:10%;
	}
	
	.horiVidChip {
		width:99%;
		height:225px;
		margin:5px;
		text-align:left;
	}
	
	.horiVidChip div {
		float:left;
		width:40%;
		height:91%;
		padding-top:1%;
		padding-bottom:1%;
	}
	
	.horiVidChip img {
		object-fit:cover;
		float:left;
		width:50%;
		margin-left:2%;
		margin-right:2%;
		margin-top:1%;
		margin-bottom:1%;
		height:210px;
	}
	
	.horiVidChip * {
		margin:0;
	}
	
	.largeHoriChip {
		width:100%;
		min-height:330px;
		margin:5px;
		text-align:left;
	}
	
	.largeHoriChip .bImg, .largeHoriChip .inner {
		float:left;
		width:45%;
	}
	
	.largeHoriChip .inner {
		padding-top:3%;
		padding-bottom:3%;
		padding-right:1%;
	}
	
	.largeHoriChip .inner * {
		margin:1px;
	}
	
	.largeHoriChip .bImg {
		object-fit:cover;
		height:270px;
		padding-top:3%;
		padding-bottom:3%;
		padding-left:1%;
		padding-right:1%;
	}
	
	.bigSquare {
		width:110px;
		height:110px;
	}
	
	.channelDiv {
		height:200px;
	}
	
	.channelDiv img {
		width:10%;
		height:50%;
	}
	
	.channelInf {
		padding-left:1%;
		padding-right:1%;
	}
	
	.option {
		padding-left:5%;
	}
}
@media (min-width:1001px) {
	.hdr {
		padding-top:1%;
		padding-left:1.3%;
		height:40px;
	}

	.hdr * {
		float:left;
		margin:0;
	}

	.hdr h1 {
		margin-right:7px;
	}

	.hdr button {
		padding:0;
		border:0;
		width:40px;
		height:37px;
		margin-left:5px;
	}

	.hdr input {
		height:35px;
		padding-left:5px;
		padding-right:5px;
		transition:width .5s;
		width:250px;
	}

	.hdr input:focus, .hdr input:active {
		width:275px;
	}

	input {
		font-family:Arial;
		padding:0;
	}

	.body {
		padding-left:1%;
		padding-right:1%;
	}

	.title {
		margin-bottom:0;
		margin-left:.35%;
	}
	
	.vidChip {
		width:300px;
		height:300px;
		float:left;
		margin:5px;
	}
	
	.vidChip img {
		margin:4%;
		width:92%;
		height:150px;
		object-fit:cover;
	}
	
	.vidChip h3 {
		margin-top:-2%;
		margin-left:4%;
		margin-right:4%;
		margin-bottom:0;
	}
	
	.vidChip h4 {
		margin-top:0;
		margin-left:4%;
		margin-right:4%;
		margin-bottom:0;
	}
	
	.details {
		width:100%;
	}
	
	.details * {
		margin-top:2px;
		margin-bottom:0;
	}
	
	video {
		width:100%;
		background:black;
		max-height:630px;
	}
	
	.authorInfo, .ratioInfo {
		width:45%;
	}
	
	.ratioInfo, .ratioInfo * {
		float:right;
	}
	
	.authorInfo, .authorInfo * {
		float:left;
	}
	
	.authorInfo img {
		margin-right:5px;
	}
	
	.authorInfo div * {
		float:none;
	}
	
	.vidInfo {
		width:60%;
		margin-right:1%;
		transition:width .5s;
	}
	
	.vidInfo, .related {
		float:left;
	}
	
	.related {
		width:35%;
		margin:0;
		transition:width .5s;
	}
	
	.related h2 {
		margin-top:0;
		margin-left:0.8%;
	}
	
	.horiVidChip {
		width:100%;
		height:150px;
		margin:5px;
	}
	
	.horiVidChip .inner {
		float:left;
		width:60%;
		height:91%;
		padding-top:1%;
		padding-bottom:1%;
	}
	
	.horiVidChip img {
		object-fit:cover;
		float:left;
		width:35%;
		margin-left:2%;
		margin-right:2%;
		margin-top:1%;
		margin-bottom:1%;
		height:140px;
	}
	
	.horiVidChip * {
		margin:0;
	}
	
	.moreDetails {
		margin-top:6%;
	}
	
	.largeHoriChip {
		width:100%;
		min-height:300px;
		margin:5px;
	}
	
	.largeHoriChip .bImg {
		width:25%;
		height:260px;
		object-fit:cover;
		float:left;
		margin:1%;
	}
	
	.largeHoriChip .square {
		width:260px;
		height:260px;
		float:left;
	}
	
	.largeHoriChip div {
		float:left;
		text-decoration:none;
		padding-top:1%;
		padding-bottom:1%;
		padding-right:1%;
		max-width:55%;
	}
	
	.largeHoriChip div * {
		margin-bottom:2px;
		margin-top:0;
	}
	
	.bigSquare {
		width:10%;
		height:90%;
	}
	
	.horiInnerChip {
		width:97%;
		margin:1%;
		height:200px;
		text-align:left;
	}
	
	.horiInnerChip img {
		width:525px;
		height:180px;
		object-fit:cover;
		float:left;
		margin:.5%;
	}
	
	.channelDiv {
		height:360px;
	}
	
	.channelDiv img {
		height:53%;
		width:10%;
	}
}

